# gircalph

./: CMakeLists.txt
conf/: gircalph.cnf
src/algorithm/: my_algorithm.cpp  my_algorithm.hpp
src/api/: edge.hpp  graph_edge.hpp  graph_vertex.hpp  user_algorithm.hpp  vertex.hpp
src/engine/: gircalph_engine.hpp
src/examples/: check_parameter_loading.cpp
src/test/: test_current_workflow.cpp
src/util/: cmdopts.cpp  cmdopts.hpp  config_loader.cpp  config_loader.hpp  graph_loader.cpp  graph_loader.hpp  load_file_data_opts.cpp  load_file_data_opts.hpp
